# CS6533

./: .gitignore  CMakeLists.txt  Readme.txt  note.xoj
3d_models/Monk_Giveaway/: Monk_Giveaway.mtl
examples/colorful_square/: .time.cpp.swp  CMakeLists.txt  colorful.cpp  fragment_colorful.glsl  fragment_rotate.glsl  fragment_texture.glsl  fragment_time.glsl  rotate.cpp  single_colored.cpp  texture.cpp  time.cpp  vertex_colorful.glsl  vertex_rotate.glsl  vertex_single_colored.glsl  vertex_texture.glsl  vertex_time.glsl
examples/cube/: .ycm_extra_conf.py  CMakeLists.txt  Keyboard.h  LuaTable.cpp  config.cpp  config.h  config.lua  cube.cpp  fragment.glsl  vertex.glsl
examples/first/: CMakeLists.txt  Timer.cpp  main.cpp
examples/lighting/: .ycm_extra_conf.py  CMakeLists.txt  Entity.h  config.lua  fragment.glsl  lighting.cpp  vertex.glsl
examples/model/: CMakeLists.txt  Light.cpp  a.out  config.lua  fragment.glsl  geometrymaker.h  id_fragment.glsl  id_vertex.glsl  model.cpp  vertex.glsl
homework/homework1/: CMakeLists.txt
homework/homework2/: Entity.cpp  Entity.h  config.lua  fragment.glsl  lighting.cpp  vertex.glsl
include/: Attribute.h  BufferObject.h  IOAux.h  Noncopyable.h  Program.h  Shader.h  Task.h  Texture.h  Timer.h  Uniform.h  Wrapper.h  geometrymaker.h  glsupport.h  matrix4.h
src_wraplib/: .ycm_extra_conf.py  Attribute.cpp  BufferObject.cpp  CMakeLists.txt  IOAux.cpp  Program.cpp  Timer.cpp  Uniform.cpp  glsupport.cpp
template/linux/: CMakeLists.txt  main.cpp
